--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
     <button type="button">Agende sua consulta aqui</button>
   
   <h2 style="color: beige;"> Quem Somos</h2>
-  <p style="color: beige;"> Somos uma organização não beneficente que visa ajudar as pessoas com problemas <br> psicológicos que não tem condições de pagarem uma consulta de alto nivel.</p>
+  <p style="color: beige;"> Somos uma instituição que foca em
+ajudar as pessoas de baixa renda e
+que necessitam de alguma ajuda
+psicológica. Nosso foco é em
+fornecer consultas gratuitas e caso
+necessário ajuda financeira com os
+devidos remédios..</p>
   
   <h1 style="color: beige;"> Agende sua consulta e venha ser feliz com a JJSAUDE</h1>
   
