--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ p{
     <script>
         // Adicionar um evento de clique aos links
         document.querySelector('li a[href="index.html"]').addEventListener('click', function() {
-            window.location.href = 'home.html';
+            window.location.href = 'av.html';
         });
 
         document.querySelector('li a[href="sobre.html"]').addEventListener('click', function() {
